# agent-dashboard

./: .env.example  .gitignore  README.en.md  README.md  cli_wrapper.py  dashboard.html  report_cli.py  server.py  status_store.py
design_doc/: main.md
design_doc/progress/: v3-ai-summary-renaming-plan.md  v5-english-support-progress.md
docs/: architecture.md
docs/progress/: terminal-compat-fix.md  v2-terminal-sessions-plan.md  v2-terminal-sessions-progress.md  v4-agent-special-support-progress.md  v6-project-structure-progress.md  v7-user-settings-progress.md
frontend/: index.html
integrations/: agent_dashboard_hook.py
integrations/examples/: claude-code-hooks.json  claude-code-statusline.json  codex-hooks.json  opencode-agent-dashboard.js
prototypes/python-dashboard/: README.md  cli_wrapper.py  report_cli.py  server.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_llm.rs
src-tauri/permissions/: app.toml
src-tauri/src/: agent_support.rs  api.rs  lib.rs  llm.rs  main.rs  pty.rs  session.rs  settings.rs  store.rs
