[package]
name = "agent-dashboard"
version = "0.1.0"
edition = "2021"
description = "Multilingual dashboard for monitoring terminal-based AI agents"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
axum = { version = "0.7", features = ["macros"] }
chrono = "0.4"
portable-pty = "0.9.0"
base64 = "0.22.1"
llama-cpp-2 = "0.1.151"
encoding_rs = "0.8.35"
ureq = { version = "2", features = ["json"] }
dotenvy = "0.15.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
